# gazebo-course

IK/: CMakeLists.txt  IKPlanar.cpp  IKSpatial.cpp  env.sh  planar.world  spatial.world
IK/planar_robot/: model.sdf
Jacobians/: CMakeLists.txt  JacobiansPlanar.cpp  env.sh  planar.world
Jacobians/coord_frame/: .model.sdf.swo  model.sdf
Jacobians/planar_robot/: model.config
coord_frames/: .coord_frame_planar2.cpp.swp  .coord_frame_plugin.cpp.swp  .spatial.world.swp  CMakeLists.txt  coord_frame_planar.cpp  coord_frame_planar2.cpp  coord_frame_spatial.cpp  env.sh  planar.world  planar2.world  spatial.world
coord_frames/coord_frame/: model.config
coord_frames/planar_robot/: model.sdf
feedback_control/: CMakeLists.txt  PD_hold.cpp  PD_hold.world  PID_hold.cpp  PID_hold.world  plot_PD_hold.py  plot_PID_hold.py  plot_track_sinusoidal.py  track_sinusoidal.cpp  track_sinusoidal.world
feedback_control/double_pendulum_bobs/: model.config  model.sdf
inverse_dynamics/: CMakeLists.txt  PD_hold.cpp  PD_hold.world  env.sh  inverse_dynamics.cpp  plot_PD_hold.py  plot_PD_hold_torques.py  plot_track_sinusoidal_torques.py  track_sinusoidal.cpp
inverse_dynamics/double_pendulum_bobs_hilimits/: .model.sdf.swp  model.config  model.sdf
